players now can change turns fixed some bugs